# etip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
apps/api/: .env.example  pyproject.toml  sample_employees_alice.csv  sample_employees_bob.csv
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_constraints_and_indexes.py  003_user_email_unique_per_tenant.py  004_add_is_platform_admin.py
apps/api/connectors/github/: pyproject.toml
apps/api/connectors/github/src/etip_connector_github/: __init__.py  client.py  connector.py  skills.py
apps/api/connectors/jira/: pyproject.toml
apps/api/core/: pyproject.toml
apps/api/core/src/etip_core/: __init__.py  hookspecs.py  plugin_manager.py  schemas.py  settings.py
apps/api/scripts/: explore_jira.py  seed_multi_tenant.py  seed_tenant.py
apps/api/src/etip_api/: database.py  main.py
apps/api/src/etip_api/auth/: __init__.py  dependencies.py  jwt.py
apps/api/src/etip_api/middleware/: __init__.py
apps/api/src/etip_api/models/: __init__.py  allocation.py  audit.py  connector.py  employee.py  project.py  recommendation.py  skill.py  tenant.py  user.py
apps/api/src/etip_api/routers/: analytics.py  auth.py  connectors.py  employees.py  projects.py  recommendations.py  tenants.py  users.py
apps/api/src/etip_api/schemas/: recommendations.py
apps/api/src/etip_api/services/: audit.py  crypto.py  embedding.py  esco.py  llm.py  matching.py
apps/api/src/etip_api/worker/: celery_app.py  sync.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_analytics.py  test_auth.py  test_connectors.py  test_employees.py  test_projects.py  test_tenants.py  test_users.py
apps/api/tests/unit/: test_security_fixes.py
apps/api/tests/unit/auth/: test_dependencies.py  test_jwt.py  test_password.py
apps/api/tests/unit/connectors/: test_github_connector.py  test_github_skills.py
apps/api/tests/unit/core/: test_plugin_manager.py  test_schemas.py
apps/api/tests/unit/routers/: conftest.py  test_analytics_router.py  test_auth_new_endpoints.py  test_auth_router.py  test_connectors_router.py  test_employees_router.py  test_middleware.py  test_projects_router.py  test_recommendations_router.py  test_tenants_router.py  test_users_router.py
apps/api/tests/unit/services/: test_crypto.py  test_embedding.py  test_esco.py  test_llm.py  test_llm_cache.py  test_matching.py  test_sync.py
infra/: Dockerfile.api  Dockerfile.web  (+1 more)
(+75 files in other folders)
