[project]
name = "etip-api"
version = "0.1.0"
description = "ETIP FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "etip-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",       # Alembic sync driver
    "alembic>=1.14",
    "pyjwt[crypto]>=2.10",
    "bcrypt>=4.0",
    "python-multipart>=0.0.19",
    "redis[hiredis]>=5.2",
    "qdrant-client[fastembed]>=1.12",  # includes fastembed for local OSS embeddings
    "fastembed>=0.4",
    "flashrank>=0.2",                  # lightweight cross-encoder reranking (ms-marco-MiniLM, CPU-only)
    "litellm>=1.55",                   # unified interface for 100+ LLM providers
    "httpx>=0.27",
    "celery>=5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etip_api"]
