[project]
name = "etip-core"
version = "0.1.0"
description = "ETIP core — plugin hookspecs, base schemas, settings"
requires-python = ">=3.12"
dependencies = [
    "pluggy>=1.5",
    "apluggy>=1.0",       # async pluggy wrapper
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etip_core"]
