[project]
name = "etip-connector-github"
version = "0.1.0"
description = "ETIP connector — GitHub (repos, languages, commit activity)"
requires-python = ">=3.12"
dependencies = [
    "etip-core",
    "httpx>=0.27",
]

[project.entry-points."etip"]
github = "etip_connector_github:GitHubConnector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etip_connector_github"]
