[project]
name = "etip-connector-jira"
version = "0.1.0"
description = "ETIP connector — Jira Cloud (projects, users, skill inference from issues)"
requires-python = ">=3.12"
dependencies = [
    "etip-core",
    "httpx>=0.27",
]

[project.entry-points."etip"]
jira = "etip_connector_jira:JiraConnector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etip_connector_jira"]
